// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUp /> Renders form if not authenticated 1`] = `
<form>
  <Field
    component={[Function]}
    label="Email"
    name="email"
    type="email"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <Field
    component={[Function]}
    label="Password"
    name="password"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <Field
    component={[Function]}
    label="Confirm Password"
    name="passwordConfirm"
    type="password"
    validate={[Function]}
  />
  <button
    action="submit"
    className="btn btn-primary"
  >
    Sign up!
  </button>
</form>
`;

exports[`<SignUp /> Renders sign out button if authenticated 1`] = `
<div>
  <p>
    You are already signed in.
  </p>
  <button>
    Sign Out
  </button>
</div>
`;

exports[`<SignUp /> Renders success message if submit succeeded 1`] = `
<div>
  <p>
    Thank you for signing up. Check your email to verify your account.
  </p>
</div>
`;
